--- a/api.yaml
+++ b/api.yaml
@@ -36,6 +36,7 @@ paths:
     get: #defining the get endpoint
       summary: List of all contacts
       description: This endpoint returns information about all the contacts from the ContactAPI database
+      operationId: getContact
       tags:
         - Contact Management
       security:
@@ -48,6 +49,7 @@ paths:
     post:
       summary: Creating a new contact
       description: This endpoint creates a new contact in to the contact database
+      operationId: addContact
       tags:
         - Contact Management
       security:
@@ -68,6 +70,7 @@ paths:
     delete:
       summary: Deleting an existing contact
       description: This endpoint permit the deletion
+      operationId: deleteContact
       tags:
         - Contact Management
       security:
@@ -76,9 +79,9 @@ paths:
         - in: path
           name: id
           required: true
-          # format: ObjectId
           schema:
             type: string
+            format: ObjectId
       responses:
         200:
           description: deleted successfully
@@ -89,6 +92,7 @@ paths:
     put:
       summary: Updating an existing contact
       description: This endpoints permits the user to update information on a particular contact using the id
+      operationId: updateContact
       tags:
         - Contact Management
       security:
@@ -97,9 +101,9 @@ paths:
         - in: path
           name: id
           required: true
-          # format: objectId
           schema:
             type: string
+            format: objectId
       requestBody:
         required: true
         content:
@@ -115,6 +119,7 @@ paths:
     get:
       summary: List of all contacts that matches the searchterm
       description: This endpoint permits the user to search for a contact
+      operationId: getContactBysearchTerm
       tags:
         - Contact Management
       security:
